--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.0.0",
+    "bulma": "^0.9.4",
     "core-js": "^3.8.3",
     "pinia": "^2.0.22",
     "vue": "^3.2.13",
